@@ -9,6 +9,7 @@
       was flawed and could cause crashes. In most (all?) cases, 
       there is a reasonable, if not better, alternate way to 
       accomplish the same thing.
+    * Added grid sample that was ported by shanko (Thanks!)
     
 
 2004-05-29
